--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,8 @@
     "express": "^4.17.1",
     "firebase": "^8.0.1",
     "firebase-admin": "^9.3.0",
-    "morgan": "^1.10.0"
+    "jwt-decode": "^3.1.2",
+    "morgan": "^1.10.0",
+    "uuid": "^8.3.1"
   }
 }
